--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -106,7 +106,7 @@
 }
 
 .port-navbar.port-nav-base.port-nav-default {
-	padding: 30.3em;
+	padding: 3rem;
 	background-color: $secondary !important;
 }
 
