--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -1,7 +1,7 @@
 // Index -----------
 .cover {
 	background-image: linear-gradient(45deg, #00aeef 0%, #096fb9 100%);
-	overflow: hidden;
+	// overflow: hidden;
 	position: relative;
 }
 
