--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,7 +29,7 @@ body {
 }
 
 .base-page {
-	padding-top: 15rem;
+	// padding-top: 15rem;
 	color: white;
 	color: black;
 	background-color: #ecedee;
