--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,7 +9,7 @@
 // PAGES
 @import './index';
 @import './portfolios';
-// @import './blogs';
+@import './blogs';
 // @import './about';
 // @import './cv';
 
